--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "pg": "^8.16.3",
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "@google/genai": "^1.2.0"
   }
 }
