--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "watermark-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
   "type": "commonjs",
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec tsx src/server.ts",
