--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "type": "commonjs",
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec tsx src/server.ts",
+    "build": "tsc",
     "start": "node dist/server.js",
-    "build": "tsc"
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
